--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="mindar-image-three.prod.js"></script>
-    <script src="main.js" type="module"></script>
+    <script src="./mindar-image-three.prod.js"></script>
+    <script src="./main.js" type="module"></script>
     <style>
       html, body {position: relative; margin: 0; width: 100%; height: 100%; overflow: hidden}
     </style>
   </head>
   <body>
-    <h1>H RABBIT C t2</h1>
+    <h1>H RABBIT C t3</h1>
   </body>
 </html>
